Fix defect http://trac.osgeo.org/mapguide/ticket/1407: Display package logs is too small in firefox
git-svn-id: http://svn.osgeo.org/mapguide/trunk/MgDev@5268 a442ad82-b40c-0410-ae44-e6d7bd6e4a36

--- a/Web/src/mapadmin/css/resizablestyles.css
+++ b/Web/src/mapadmin/css/resizablestyles.css
@@ -723,7 +723,13 @@ td.logPropsTableBody {
 
 table.logDisplayTable {
     width: 100%;
+    height: 100%;
 }
+
+tr.logDisplayTable td.content form{  
+    height: 100%;  
+} 
+
 td.logDisplayTable {
     width: 100%;
     background-color: #FFFFFF;
